--- a/front-app/public/index.html
+++ b/front-app/public/index.html
@@ -6,6 +6,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@kdnakt" />
+    <meta name="twitter:title" content="%REACT_APP_OGP_TITLE%" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="%REACT_APP_OGP_TITLE%" />
+    <meta property="og:description" content="%REACT_APP_OGP_DESCRIPTION%" />
+    <meta property="og:image" content="%REACT_APP_OGP_IMAGE%" />
+    <meta name="twitter:image" content="%REACT_APP_OGP_IMAGE%" />
+    <meta name="twitter:description" content="%REACT_APP_OGP_DESCRIPTION%" />
     <title>5F</title>
 </head>
 
